changed app condition to role condition in forgot pass

--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -31,9 +31,9 @@
                 Email Address: <%#= @user_info[:email] %>
               </p>
             </p> -->
-            <%if @user_info[:app_type].eql?('angular') %>
+            <%if @user_info[:role].eql?('Student') %>
               <p style="margin:15px 0; font-size:13px">
-			          A request has been made to reset the Books That Grow password for <%= @user_info[:username] %>. To reset this password, click on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
+			          A request has been made to reset the Books That Grow password for <%= @user_info[:full_name] %>. To reset this password, click on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
               </p>
               <p style="margin:15px 0; font-size:13px">
                 If you believe this request was made in error or if you do not wish to reset this password, you can simply ignore this email.
