--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,26 +17,32 @@
 		<%elsif @role_id.name.eql?('School Admin')%>
 		    <% if (can? :create, :users) && (can? :create_sa, :users) %>
 		        <%=link_to 'Add School Admin', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
-				<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
 			<%end%>
+			<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
 			<%=link_to 'Download Sample',"", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "school_admin", :"data-toggle" => "modal", :"data-target" => "#download_list_modal" %>
-			<%=link_to 'Import School Admin List', import_list_users_path(:list_type => "school_admin",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<% if (can? :create, :users) && (can? :create_sa, :users) %>
+				<%=link_to 'Import School Admin List', import_list_users_path(:list_type => "school_admin",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<%end%>
 			<%#= link_to 'Un-archive', un_archive_users_list_users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" %>
 		<%elsif @role_id.name.eql?('Teacher')%>
 		    <% if (can? :create, :users) && (can? :create_teacher, :users) %>
 			    <%=link_to 'Add Teacher', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
-				<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
-		    <%end%>	
-			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "teacher", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
-			<%=link_to 'Import Teacher List', import_list_users_path(:list_type => "teacher",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<%end%>	
+			<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
+		    <%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "teacher", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
+			<% if (can? :create, :users) && (can? :create_teacher, :users) %>	
+				<%=link_to 'Import Teacher List', import_list_users_path(:list_type => "teacher",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<%end%>	
 			<%#= link_to 'Un-archive', un_archive_users_list_users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" %>
 		<%elsif @role_id.name.eql?('Student')%>
 			<% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>
 			    <%=link_to 'Add Student', new_user_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
-				<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
 			<%end%>
+			<%=link_to 'List All Records', users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" if @search_flag %>
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "student", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
-			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<% if ((can? :read, :users) && (can? :read_student, :users)) || ((can? :read, :users) && (can? :manage_student, :users)) %>
+				<%=link_to 'Import Student List', import_list_users_path(:list_type => "student",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
+			<%end%>
 			<%#= link_to 'Un-archive', un_archive_users_list_users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs" %>
 		<%end%>
 		<% unless @role_id.name.eql?('Web Admin')%>
